# datacube

./: Cargo.toml  README.md  build.rs  datacube.service  datacube.spec  justfile
.github/workflows/: ci.yml
proto/: datacube.proto
src/: config.rs  lib.rs  main.rs  server.rs
src/providers/: applications.rs  calculator.rs  command.rs  manager.rs  mod.rs
