[package]
name = "datacube"
version = "0.1.12"
edition = "2021"
authors = ["Hypercube Project"]
description = "Data provider service for application launchers and desktop utilities"
license = "Apache-2.0"
repository = "https://github.com/hypercube/datacube"
keywords = ["launcher", "desktop", "wayland", "hyprland"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime ("full" already enables net, sync, io-util, macros and rt-multi-thread)
tokio = { version = "1", features = ["full"] }

# Protocol buffers
prost = "0.14"

# Desktop entry parsing
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.4"

# File watching
notify = "8"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Math evaluation
evalexpr = "13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
dirs = "6"
futures = "0.3"

[build-dependencies]
prost-build = "0.14"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "datacube"
path = "src/main.rs"

[[bin]]
name = "datacube-cli"
path = "src/bin/datacube-cli.rs"
